--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,9 @@ baseurl:          /
 
 author:
   name:           'Emily Lewis'
+  
+ twitter:
+  username: esllewis
   url:            https://twitter.com/esllewis
 
 paginate:         5
@@ -24,5 +27,7 @@ paginate:         5
 # Custom vars
 #version:          2.1.0
 
-#github:
-#  repo:           https://github.com/poole/hyde
+github:
+  repo:           https://github.com/poole/hyde
+  url:            https://github.com/esl-lewis
+  
