add image, rewrite homepage

--- a/_config.yml
+++ b/_config.yml
@@ -31,3 +31,6 @@ github:
   repo:           https://github.com/poole/hyde
   url:            https://github.com/esl-lewis
   
+linkedin: 
+  url:            https://www.linkedin.com/in/emilylewis24/
+  
